fix: fonts and horizontal overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -81,6 +81,7 @@
   body {
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
+    overflow-x: hidden;
   }
 }
 
@@ -151,7 +152,7 @@ section::before {
 .card-radiant {
   width: 100%;
   height: 100%;
-  max-width: 250px;
+  max-width: 275px;
   padding: 1rem;
   background: var(--colors-c1);
   box-shadow: 0px 0px 18px var(--colors-c3), 0px 0px 2px var(--colors-c4);
